--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "PGM_Control",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.10.2",
     "@rails/actioncable": "^6.0.0-alpha",
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.7",
     "bootstrap": "4.3.1",
+    "chart.js": "^2.8.0",
+    "chartkick": "^3.1.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "typescript": "^3.6.3"
   },
   "version": "0.1.0",
   "devDependencies": {
